# anime-tracker

./: .gitignore  README.md  package.json  render.yaml
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: anime.py  entries.py  imports.py  reviews.py  users.py
backend/app/core/: cache.py  config.py
backend/app/db/: bootstrap.py  session.py
backend/app/models/: anime_entry.py  review.py  user.py
backend/app/schemas/: anime.py  entry.py  import_job.py  review.py  user.py
backend/app/services/: anilist.py  jikan.py  sync.py
backend/tests/: test_health.py
frontend/: middleware.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/backend/[...path]/: route.ts
frontend/app/api/image/: route.ts
frontend/app/api/poster/[animeId]/: route.ts
frontend/app/auth/: page.tsx
frontend/app/calendar/: page.tsx
frontend/app/profile/: page.tsx
frontend/components/: account-panel.tsx  activity-timeline.tsx  anime-library.tsx  auth-panel.tsx  current-progress.tsx  discover-panel.tsx  library-insights.tsx  library-manager.tsx  mal-import-panel.tsx  profile-overview.tsx  release-calendar.tsx  reviews-panel.tsx  safe-image.tsx  sign-out-button.tsx  site-nav.tsx  theme-toggle.tsx
frontend/lib/: account-session.ts  api.ts  mock-data.ts  server-image.ts  user-privacy.ts
frontend/types/: anime.ts
